--- a/Generative AI/foundations-GenAI-LangChain.ipynb
+++ b/Generative AI/foundations-GenAI-LangChain.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Foundations of Generative AI & LangChain\n",
+    "\n",
+    "This notebook introduces:\n",
+    "- IBM Watsonx LLM\n",
+    "- Prompting techniques\n",
+    "- LangChain basics\n",
+    "- LCEL chaining\n",
+    "\n",
+    "Estimated time: 10 minutes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Install Required Packages\n",
+    "Installs Watsonx, LangChain, and core dependencies."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -14,6 +37,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Suppress Warnings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -21,6 +51,14 @@
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialize Watsonx Granite Model\n",
+    "Creates a connection to IBM Granite LLM."
    ]
   },
   {
@@ -35,12 +73,16 @@
     "    model_id=\"ibm/granite-3-2-8b-instruct\",\n",
     "    url=\"https://us-south.ml.cloud.ibm.com\",\n",
     "    project_id=\"skills-network\",\n",
-    "    params={\n",
-    "        \"max_new_tokens\": 256,\n",
-    "        \"temperature\": 0.5,\n",
-    "        \"top_p\": 0.2\n",
-    "    }\n",
+    "    params={\"max_new_tokens\":256,\"temperature\":0.5,\"top_p\":0.2}\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Helper Function\n",
+    "Reusable function to invoke the LLM."
    ]
   },
   {
@@ -50,24 +92,18 @@
    "outputs": [],
    "source": [
     "def llm_model(prompt_txt, params=None):\n",
-    "    model_id = \"ibm/granite-3-2-8b-instruct\"\n",
-    "    default_params = {\n",
-    "        \"max_new_tokens\": 256,\n",
-    "        \"temperature\": 0.5,\n",
-    "        \"top_p\": 0.2\n",
-    "    }\n",
-    "    if params:\n",
-    "        default_params.update(params)\n",
-    "\n",
-    "    granite_llm = WatsonxLLM(\n",
-    "        model_id=model_id,\n",
-    "        url=\"https://us-south.ml.cloud.ibm.com\",\n",
-    "        project_id=\"skills-network\",\n",
-    "        params=default_params\n",
-    "    )\n",
-    "\n",
-    "    response = granite_llm.invoke(prompt_txt)\n",
-    "    return response"
+    "    default={\"max_new_tokens\":256,\"temperature\":0.5,\"top_p\":0.2}\n",
+    "    if params: default.update(params)\n",
+    "    llm=WatsonxLLM(model_id=\"ibm/granite-3-2-8b-instruct\",url=\"https://us-south.ml.cloud.ibm.com\",project_id=\"skills-network\",params=default)\n",
+    "    return llm.invoke(prompt_txt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generation Parameters\n",
+    "Shows IBM GenText parameters."
    ]
   },
   {
@@ -77,13 +113,14 @@
    "outputs": [],
    "source": [
     "from ibm_watsonx_ai.metanames import GenTextParamsMetaNames as GenParams\n",
-    "\n",
-    "GenParams().get_example_values()\n",
-    "\n",
-    "parameters = {\n",
-    "    GenParams.MAX_NEW_TOKENS: 256,\n",
-    "    GenParams.TEMPERATURE: 0.5,\n",
-    "}"
+    "GenParams().get_example_values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic Prompt"
    ]
   },
   {
@@ -92,18 +129,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {\n",
-    "    \"max_new_tokens\": 128,\n",
-    "    \"min_new_tokens\": 10,\n",
-    "    \"temperature\": 0.5,\n",
-    "    \"top_p\": 0.2,\n",
-    "    \"top_k\": 1\n",
-    "}\n",
-    "prompt = \"The wind is\"\n",
-    "\n",
-    "response = llm_model(prompt, params)\n",
-    "print(prompt)\n",
-    "print(response)"
+    "params={\"max_new_tokens\":128}\n",
+    "print(llm_model(\"The wind is\",params))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Zero-Shot Prompt"
    ]
   },
   {
@@ -112,13 +146,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = \"\"\"Classify the following statement as true or false:\n",
-    "'The Eiffel Tower is located in Berlin.'\n",
-    "Answer:\n",
+    "prompt=\"\"\"Classify true or false:\n",
+    "The Eiffel Tower is located in Berlin.\n",
     "\"\"\"\n",
-    "\n",
-    "response = llm_model(prompt, params)\n",
-    "print(response)"
+    "print(llm_model(prompt))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## One-Shot Prompt"
    ]
   },
   {
@@ -127,21 +165,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {\n",
-    "    \"max_new_tokens\": 20,\n",
-    "    \"temperature\": 0.1,\n",
-    "}\n",
-    "prompt = \"\"\"Here is an example of translating a sentence from English to French:\n",
-    "\n",
-    "English: \"How is the weather today?\"\n",
-    "French: \"Comment est le temps aujourd'hui?\"\n",
-    "\n",
-    "Now translate:\n",
-    "English: \"Where is the nearest supermarket?\"\n",
+    "prompt=\"\"\"English: Hello\n",
+    "French: Bonjour\n",
+    "Translate:\n",
+    "English: Where is the station?\n",
     "\"\"\"\n",
-    "\n",
-    "response = llm_model(prompt, params)\n",
-    "print(response)"
+    "print(llm_model(prompt,{\"temperature\":0.1}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Few-Shot Prompt"
    ]
   },
   {
@@ -150,23 +186,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {\"max_new_tokens\": 10}\n",
-    "prompt = \"\"\"Here are few examples of classifying emotions:\n",
-    "\n",
-    "Statement: I just won my first marathon!\n",
-    "Emotion: Joy\n",
-    "\n",
-    "Statement: I can’t believe I lost my keys again.\n",
-    "Emotion: Frustration\n",
-    "\n",
-    "Statement: My best friend is moving.\n",
-    "Emotion: Sadness\n",
-    "\n",
-    "Now classify:\n",
-    "Statement: That movie was so scary I had to cover my eyes.\n",
+    "prompt=\"\"\"I won the race! -> Joy\n",
+    "I lost my wallet -> Sadness\n",
+    "That horror movie scared me ->\n",
     "\"\"\"\n",
-    "\n",
-    "print(llm_model(prompt, params))"
+    "print(llm_model(prompt))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LangChain LCEL Example\n",
+    "PromptTemplate + RunnableLambda + OutputParser"
    ]
   },
   {
@@ -179,23 +211,18 @@
     "from langchain_core.runnables import RunnableLambda\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "\n",
-    "template = \"\"\"Tell me a {adjective} joke about {content}.\"\"\"\n",
-    "prompt = PromptTemplate.from_template(template)\n",
+    "template=\"Tell me a {adj} joke about {thing}.\"\n",
+    "prompt=PromptTemplate.from_template(template)\n",
     "\n",
-    "def format_prompt(vars):\n",
-    "    return prompt.format(**vars)\n",
+    "def fmt(v): return prompt.format(**v)\n",
     "\n",
-    "chain = (\n",
-    "    RunnableLambda(format_prompt)\n",
-    "    | granite_llm\n",
-    "    | StrOutputParser()\n",
-    ")\n",
+    "chain=(RunnableLambda(fmt)|granite_llm|StrOutputParser())\n",
     "\n",
-    "print(chain.invoke({\"adjective\":\"funny\",\"content\":\"chickens\"}))"
+    "print(chain.invoke({\"adj\":\"funny\",\"thing\":\"cats\"}))"
    ]
   }
  ],
- "metadata": {},
- "nbformat": 4,
- "nbformat_minor": 5
+ \"metadata\": {},
+ \"nbformat\": 4,
+ \"nbformat_minor\": 5
 }
